Sidebar overflow + Click event + On outside click Menu close + Mobile and Tab Fix

--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -1290,6 +1290,43 @@ textarea.no-input-box:focus {
     padding-bottom: 3px;
 }
 @media screen and (min-width: 992px) {
+    .app-left-menu-slide .app-left-menu-custom {
+        min-width: 59px !important;
+        max-width: 59px !important;
+    }
+    .app-left-menu-custom {
+        height: 100%;
+    }
+    .app-left-menu-custom {
+        top: 0;
+        bottom: 0;
+        left: 0;
+        min-width: 215px;
+        z-index: 12;
+        transition: .2s;
+        /* overflow: auto; */
+        background: #fff;
+        z-index: 9;
+    }
+    .app-left-menu-slide .alm_sub-menu {
+        background: white;
+        width: 200px;
+        top:0;
+        left: 4rem;
+        position: absolute;
+        border: 1px solid #0000002d;
+        border-radius: 5px;
+    }
+    .app-left-menu-slide .alm_nav-item {
+        position: relative;
+    }
+    .app-left-menu-slide .submenu-enabled .alm_nav-item .lt span,.submenu-enabled .alm_nav-item .rt i {
+        display: block !important;
+    }
+    .app-left-menu-slide .submenu-enabled .alm_sub-menu {
+        position: absolute;
+        left: 12.75rem;
+    }
     #app-product-multiplier-table .st-form-input-select {
         width: 115px;
     }
@@ -1324,22 +1361,11 @@ button.st-bg-footer-main:hover {
 .app-left-menu-custom::-webkit-scrollbar {
     width: 5px;
   }
-.app-left-menu-custom {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    width: 215px;
-    z-index: 12;
-    transition: .2s;
-    overflow: auto;
-    background: #fff;
-    z-index: 9;
-}
+
 .app-left-menu-custom .st-logo-custom {
     height: 60px;
     padding: 10px 10px;
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
 }
 .app-left-menu-custom .st-logo-custom img {
     width: 150px;
@@ -1390,9 +1416,9 @@ button.st-bg-footer-main:hover {
 .app-left-menu-slide .app-left-menu-custom {
     width: 59px;
 }
-.app-left-menu-slide .app-main-content {
+/* .app-left-menu-slide .app-main-content {
     margin-left: 59px;
-}
+} */
 .app-left-menu-slide .app-left-menu-custom .st-logo-custom>button {
     margin: 0 auto;
 }
@@ -1436,7 +1462,7 @@ button.st-bg-footer-main:hover {
         width: 215px;
     }
     .app-left-menu-slide .app-left-menu-custom {
-        overflow: auto;
+        /* overflow: auto; */
         height: auto;
         -webkit-transition: all 0.2s ease-out;
         -moz-transition: all 0.2s ease-out;
@@ -1650,6 +1676,18 @@ button.st-bg-footer-main:hover {
     }
 }
 @media screen and (max-width: 991px) {
+    .app-left-menu-custom {
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        width: 215px;
+        z-index: 12;
+        transition: .2s;
+        /* overflow: auto; */
+        background: #fff;
+        z-index: 9;
+    }
     .page-content-add-product .st-listing-table>table {
         width: 100%;
     }
@@ -2896,4 +2934,11 @@ div#masonryContainer .modal-add-widget-link:hover {
 .tab-style-1 .st-tabs-links .stl-link.active {
     color: white;
     background: #036dff;
+}
+
+div#root {
+    height: 100vh;
+}
+.pt-2-1{
+    padding-top:10px !important;
 }
